--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="/about" onclick="route(event)">アバウト</a>
         <a href="/contact" onclick="route(event)">コンタクト</a>
     </nav>
-    <div class="app"></div>
+    <div id="app"></div>
     <script src="router.js"></script>
 </body>
 </html>
