--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple SPA</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Simple SPA サンプル</h1>
@@ -22,6 +24,7 @@
         <small>例: ベースパスに /spa を使ってホスティングしても動きます。</small>
     </footer>
 
-    <script src="router.js" defer></script>
+    <script type="module" src="/js/main.js" defer></script>
 </body>
+
 </html>
